fix footer on tablet (#111)

--- a/webroot/css/responsive.css
+++ b/webroot/css/responsive.css
@@ -658,20 +658,12 @@
     	margin-bottom: 30px;
 	}
 
-    .register {
-        padding-left: 15px !important;
-    }
-
     .back-book {
         padding-bottom: 8px;
     }
 }
 
 @media (min-width: 768px) {
-    .register {
-        padding-left: 30px !important;
-    }
-
     .row.col-p30 [class*="col-"].business-solution {
         padding: 0 30px;
     }
@@ -1022,10 +1014,6 @@
 }
 
 @media (min-width: 992px) {
-    .register {
-        padding-left: 0 !important;
-    }
-
     .row.col-p30 [class*="col-"].business-solution {
         padding: 0 20px;
     }
